--- a/Zadanie_Kogorev/Zadanie_Kogorev.csproj
+++ b/Zadanie_Kogorev/Zadanie_Kogorev.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Comps\Product.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Comps\Producty.cs" />
     <Compile Include="Comps\sysdiagrams.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -108,6 +109,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\Vhod.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\ProductListPage1.xaml.cs">
@@ -115,6 +120,9 @@
     </Compile>
     <Compile Include="Pages\ProductUserControl1.xaml.cs">
       <DependentUpon>ProductUserControl1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Vhod.xaml.cs">
+      <DependentUpon>Vhod.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
