--- a/Zadanie_Kogorev/App.config
+++ b/Zadanie_Kogorev/App.config
@@ -8,7 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="HardwareShop_KogEntities" connectionString="metadata=res://*/Comps.Model1.csdl|res://*/Comps.Model1.ssdl|res://*/Comps.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-C22L3FQB\SQLEXPRESS01;initial catalog=HardwareShop_Kog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HardwareShop_KogEntities" connectionString="metadata=res://*/Comps.Model1.csdl|res://*/Comps.Model1.ssdl|res://*/Comps.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-C22L3FQB\SQLEXPRESS01;initial catalog=HardwareShop_Kog;integrated security=True;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="HardwareShop_KogEntities1" connectionString="metadata=res://*/Comps.Model1.csdl|res://*/Comps.Model1.ssdl|res://*/Comps.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-C22L3FQB\SQLEXPRESS01;initial catalog=HardwareShop_Kog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
