--- a/Zadanie_Kogorev/Zadanie_Kogorev.csproj
+++ b/Zadanie_Kogorev/Zadanie_Kogorev.csproj
@@ -90,6 +90,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Comps\ModernNavigationSystem.cs" />
     <Compile Include="Comps\Product.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -101,6 +102,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\LOG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ProductEditPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ProductListPage1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -115,6 +124,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\LOG.xaml.cs">
+      <DependentUpon>LOG.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ProductEditPage.xaml.cs">
+      <DependentUpon>ProductEditPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ProductListPage1.xaml.cs">
       <DependentUpon>ProductListPage1.xaml</DependentUpon>
     </Compile>
@@ -169,18 +184,19 @@
   <ItemGroup>
     <Resource Include="Resource\статистика.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="Comps\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
       <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
     <Content Include="Comps\Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Resource Include="Resource\Заглушка.jpg" />
   </ItemGroup>
   <ItemGroup>
